apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-fezinhadasorte
  namespace: nginx-ingress
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: fezinhadasorte-ip-external
spec:
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port: 
              number: 443
  - host: fezinhadasorte.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-fezinhadasorte-clusterip-service
            port: 
              number: 443
